--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -36,6 +36,7 @@
     "knex": "^0.16.5",
     "knex-csv-seeder": "^0.4.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
