--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -39,6 +39,7 @@
     "react-autocomplete": "^1.8.1",
     "react-cookie": "^3.1.2",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.5",
     "react-feather": "^1.1.6",
     "react-icons": "^3.6.1",
     "react-jsonschema-form": "^1.5.0",
