--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -47,7 +47,7 @@
     "jwt-decode": "^2.2.0",
     "leaflet": "^1.4.0",
     "memoizee": "^0.4.14",
-    "next": "^9.0.2",
+    "next": "^9.1.11",
     "next-cookies": "^1.1.3",
     "next-images": "^1.1.2",
     "polished": "^3.4.1",
@@ -60,6 +60,7 @@
     "react-feather": "^2.0.3",
     "react-jsonschema-form": "^1.6.1",
     "react-leaflet": "^2.2.1",
+    "react-map-gl": "^5.0.12",
     "react-modal": "^3.9.1",
     "react-piwik": "^1.6.0",
     "react-redux": "^7.1.0",
