--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -46,6 +46,7 @@
     "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
     "leaflet": "^1.4.0",
+    "mapbox-gl": "^1.4.1",
     "memoizee": "^0.4.14",
     "next": "^9.1.11",
     "next-cookies": "^1.1.3",
@@ -60,7 +61,7 @@
     "react-feather": "^2.0.3",
     "react-jsonschema-form": "^1.6.1",
     "react-leaflet": "^2.2.1",
-    "react-map-gl": "^5.0.12",
+    "react-mapbox-gl": "^4.6.1",
     "react-modal": "^3.9.1",
     "react-piwik": "^1.6.0",
     "react-redux": "^7.1.0",
