--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -48,7 +48,7 @@
     "leaflet": "^1.4.0",
     "mapbox-gl": "^1.4.1",
     "memoizee": "^0.4.14",
-    "next": "^9.1.11",
+    "next": "^9.1.1",
     "next-cookies": "^1.1.3",
     "next-images": "^1.1.2",
     "polished": "^3.4.1",
@@ -65,6 +65,7 @@
     "react-modal": "^3.9.1",
     "react-piwik": "^1.6.0",
     "react-redux": "^7.1.0",
+    "react-scrollbars-custom": "^4.0.21",
     "react-select": "^3.0.4",
     "react-svgmt": "^1.1.8",
     "react-table": "^6.10.0",
