feat(mandataire-map): add coordinates on table with migration

--- a/packages/hasura/migrations/metadata.yaml
+++ b/packages/hasura/migrations/metadata.yaml
@@ -2166,7 +2166,7 @@ tables:
       - latitude
       - longitude
       - id
-      - cities
+      - city
       - code_postal
       filter: {}
     role: mandataire
@@ -2177,7 +2177,7 @@ tables:
       - latitude
       - longitude
       - id
-      - cities
+      - city
       - code_postal
       filter: {}
     role: prepose
@@ -2189,7 +2189,7 @@ tables:
       - code_postal
       - latitude
       - longitude
-      - cities
+      - city
       filter: {}
     role: direction
   - comment: null
@@ -2199,7 +2199,7 @@ tables:
       - latitude
       - longitude
       - id
-      - cities
+      - city
       - code_postal
       filter: {}
     role: ti
