feat(hasura): update metadata and hasura version

--- a/packages/hasura/migrations/metadata.yaml
+++ b/packages/hasura/migrations/metadata.yaml
@@ -2180,7 +2180,7 @@ tables:
       - latitude
       - longitude
       - id
-      - cities
+      - city
       - code_postal
       filter: {}
     role: mandataire
@@ -2191,7 +2191,7 @@ tables:
       - latitude
       - longitude
       - id
-      - cities
+      - city
       - code_postal
       filter: {}
     role: prepose
@@ -2203,7 +2203,7 @@ tables:
       - code_postal
       - latitude
       - longitude
-      - cities
+      - city
       filter: {}
     role: direction
   - comment: null
@@ -2213,7 +2213,7 @@ tables:
       - latitude
       - longitude
       - id
-      - cities
+      - city
       - code_postal
       filter: {}
     role: ti
