--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,42 @@
-
----
-
-#
-
-include:
-  - /.gitlab-ci/variables.yml
-  - /.gitlab-ci/extends.yml
-  #
-  - /.gitlab-ci/stages/prepare.yml
-  - /.gitlab-ci/stages/quality.yml
-  - /.gitlab-ci/stages/register.yml
-
+variables:
+  DOCKER_DRIVER: overlay2
+  DOCKER_HOST: tcp://localhost:2375
+  DOCKER_VERSION: "18.06"
 
 #
 
 stages:
-- "Prepare"
-- "Code Quality"
 - "Registration"
 
+###########################################
+###       REGISTER DOCKER IMAGES        ###
+###########################################
+
+#
+.register_stage: &register_stage
+  stage: "Registration"
+  image: docker:$DOCKER_VERSION
+  services:
+    - docker:$DOCKER_VERSION-dind
+  # before_script:
+  #   - echo "$CI_JOB_TOKEN" | docker login $CI_REGISTRY -u gitlab-ci-token --password-stdin
+  #   - docker pull $IMAGE_NAME:$CI_COMMIT_BEFORE_SHA || true
+  script:
+    - echo "Build $IMAGE_NAME:$CI_COMMIT_SHA from $IMAGE_NAME:$CI_COMMIT_BEFORE_SHA"
+    - docker build --cache-from $IMAGE_NAME:$CI_COMMIT_BEFORE_SHA -t $IMAGE_NAME:$CI_COMMIT_SHA -f $DOCKERFILE_PATH $CONTEXT
+    - docker push $IMAGE_NAME
+#
+
+Register api image:
+  <<: *register_stage
+  variables:
+    CONTEXT: .
+    DOCKERFILE_PATH: packages/api/Dockerfile
+    IMAGE_NAME: $CI_REGISTRY_IMAGE/api
+
+Register app image:
+  <<: *register_stage
+  variables:
+    CONTEXT: .
+    DOCKERFILE_PATH: packages/app/Dockerfile
+    IMAGE_NAME: $CI_REGISTRY_IMAGE/app
